<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>java-to-kotlin</module>
        <module>java-to-kotlin-complete</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.13</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>nl.rabobank.kotlinmovement</groupId>
    <artifactId>recipes</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>recipes</name>
    <description>Provides CRUD operations for the recipes data.</description>

    <properties>
        <java.version>17</java.version>
        <flyway.version>9.4.0</flyway.version>
        <rest-assured.version>5.0.1</rest-assured.version>
        <lombok.version>1.18.30</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
        </dependency>
    </dependencies>

</project>
